fix: parent container now centered and wrapped

--- a/src/app/feature/main-panel/main-panel.component.scss
+++ b/src/app/feature/main-panel/main-panel.component.scss
@@ -1,6 +1,14 @@
 .container{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color: darkgray;
+    flex-flow: column wrap;
+    align-content: center;
+}
+.panel-parent{
+    width: 90%;
+    margin: 5px;
+    max-width: 600px;
+}
+.main-panel {
+    height: 50px;
+    background-color: blue;
 }
